update: adiciona o footer

--- a/index.html
+++ b/index.html
@@ -71,5 +71,8 @@
         Seus lábios são aparelhos <br>
         Deixe que Deus interprete.</p>
     </article>
+    <footer>
+        <p>Site criado por <a href="">Gustavo Guanabara</a> para o <a href="">CursoemVideo</a></p>
+    </footer>
 </body>
 </html>
